refactor(core): 优化异常恢复和认证策略服务代码
- 用 AtomicBoolean 替换 volatile boolean 实现线程安全的初始化标志
- AnomalyRecoveryScanner 使用领域层仓库替代直接访问 Mapper，提升架构层次
- 认证策略相关接口统一为 AuthPolicyDTO，简化创建和更新逻辑，统一保存方法
- 公司管理相关接口统一使用 CompanyDTO，实现创建和更新方法合并
- AuthServiceImpl 中用户登录登出事件发布增加设备类型及管理员踢出事件
- CacheLoader 抛出自定义 CacheLoadException，提升异常语义清晰度
- CacheThreadPoolManager 优化为静态内部类单例模式，提升实例初始化安全性
- CircuitBreaker 调整异常捕获逻辑，避免重复包装 RuntimeException